# queue-thread-safe

./: .gitignore  CMakeLists.txt  README.md
include/: queue.h  utils.h
src/internal/: queue_internal.h
src/queue/: _dequeue.c  _enqueue.c  dequeue.c  enqueue.c
tests/: CMakeLists.txt  test_queue_en_de.c
